force-app/main/default/objects/User_utilization_setting__mdt/User_utilization_setting__mdt.object-meta.xml
<CustomObject>
    <label>User utilization setting</label>
    <pluralLabel>User utilizations setting</pluralLabel>
</CustomObject>