force-app/main/default/objects/User_utilization_setting__mdt/fields/Count_type__c.field-meta.xml
<CustomField>
    <fullName>Count_type__c</fullName>
    <label>Count type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>