force-app/main/default/objects/User_utilization_setting__mdt/fields/Country_format__c.field-meta.xml
<CustomField>
    <fullName>Country_format__c</fullName>
    <description>Use field in the object Country__c</description>
    <label>Country format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
                <default>true</default>
                <label>Name</label>
            </value>
            <value>
                <fullName>Iso3Code__c</fullName>
            </value>
            <value>
                <fullName>StoreOrUser__c</fullName>
            </value>
            <value>
                <fullName>Case__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>