force-app/main/default/objects/User_utilization_setting__mdt/fields/Country_link__c.field-meta.xml
<CustomField>
    <fullName>Country_link__c</fullName>
    <label>Country link</label>
    <length>80</length>
    <type>Text</type>
</CustomField>