force-app/main/default/objects/User_utilization_setting__mdt/fields/Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivated</label>
    <type>Checkbox</type>
</CustomField>