force-app/main/default/objects/User_utilization_setting__mdt/fields/Field_to_update__c.field-meta.xml
<CustomField>
    <fullName>Field_to_update__c</fullName>
    <label>Field to update</label>
    <length>80</length>
    <type>Text</type>
</CustomField>