force-app/main/default/objects/User_utilization_setting__mdt/fields/Per_day__c.field-meta.xml
<CustomField>
    <fullName>Per_day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Per day</label>
    <type>Checkbox</type>
</CustomField>