force-app/main/default/objects/User_utilization_setting__mdt/fields/Specific__c.field-meta.xml
<CustomField>
    <fullName>Specific__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specific</label>
    <type>Checkbox</type>
</CustomField>