force-app/main/default/objects/User_utilization_setting__mdt/listViews/All_details.listView-meta.xml
<ListView>
    <fullName>All_details</fullName>
    <columns>MasterLabel</columns>
    <columns>Query__c</columns>
    <columns>Count_type__c</columns>
    <columns>Per_day__c</columns>
    <columns>Country_link__c</columns>
    <columns>Country_format__c</columns>
    <columns>Field_to_update__c</columns>
    <columns>Deactivated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All details</label>
    <language>en_US</language>
</ListView>